--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -5,16 +5,16 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Dirikan sebuah kota!\nPilih Penetap (unit dengan bendera) > Klik tombol 'temukan kota' (pojok kiri bawah) 
 Enter the city screen!\nClick the city button twice = Masuk ke tampilan kota!\nKlik tombol kota dua kali
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Pilih sebuah teknologi untuk riset!\nKlik tombol teknologi (warna hijau, pojok kiri atas) > \n pilih teknologi > klik 'Meneliti' (pojok kanan bawah)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Membangun sebuah bangunan!\nMasuk ke tampilan kota > Klik ke sebuah unit atau bangunan (sebelah kiri)
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Melewati satu giliran!\nMelewati unit dengan tombol 'Unit selanjutnya' > Klik 'Giliran selanjutnya'
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Mengelola ulang daerah!\nMasuk ke tampilan kota > tekan daerah yang dikelola (warna hijau) untuk berhenti mengelola> \n klik sebuah daerah yang tidak dikelola
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Bangun sebuah bangunan!\nMasuk ke tampilan kota > Klik ke sebuah unit atau bangunan (sebelah kiri)
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Lewati satu giliran!\nMelewati unit dengan tombol 'Unit selanjutnya' > Klik 'Giliran selanjutnya'
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Kelola ulang daerah!\nMasuk ke tampilan kota > tekan daerah yang dikelola (warna hijau) untuk berhenti mengelola> \n klik sebuah daerah yang tidak dikelola
 Meet another civilization!\nExplore the map until you encounter another civilization! = Bertemu peradaban lain!\nMenjelajahi peta sampai bertemu dengan peradaban yang lain!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Membuka opsi!\nTekan tombol Menu (pojok kiri atas) > tekan 'Opsi'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Bangun sebuah improvisasi!\nBuat sebuah unit pekerja > Pindahkan ke daerah Dataran atau Padang rumput > \n Klik 'Buat Improvisasi' (diatas tabel unit, pojok bawah kiri)\n > Pilih pertanian > \n Biarkan mereka bekerja sampai selesai
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Bangun sebuah improvisasi daerah!\nBuat sebuah unit pekerja > Pindahkan ke daerah Dataran atau Padang rumput > \n Klik 'Buat Improvisasi' (diatas tabel unit, pojok bawah kiri)\n > Pilih pertanian > \n Biarkan mereka bekerja sampai selesai
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Membuat sebuah rute perdagangan!\nBangun jalan antara ibukota dan kota lain yang dimiliki\nOr, otomatisasi pekerjamu dan biarkan sampai terbangun dengan sendirinya
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Kuasai sebuah kota!\nTurunkan darah sebuah kota musuh hingga rendah > \nMasuk ke kota dengan sebuah unit jarak dekat
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Pindahkan sebuah unit udara!\nPilih sebuah unit udara > pilih kota lain yang didalam jarak pesawat tersebut > \nPindah unit tersebut ke kota lain
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Cek statistikmu!\nMasuk ke tampilan Tinjauan lebih (pojok kanan atas) >\nKlik tombol 'Statistik'
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Cek statistikmu!\nMasuk ke tampilan Selengkapnya (pojok kanan atas) >\nKlik tombol 'Statistik'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Oh tidak! Sepertinya ada sesuatu yang buruk terjadi! Seharusnya ini tidak terjadi! Tolong kirim ke saya (yairm210@hotmail.com) sebuah email dengan informasi permainan (menu -> simpan permainan -> salin informasi permainan -> tempel ke email) dan Aku akan mencoba untuk memperbaikinya secepat mungkin!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Oh tidak! Sepertinya ada sesuatu yang buruk terjadi! Seharusnya ini tidak terjadi! Tolong kirim kami sebuah laporan dan kami akan memperbaikinya secepat mungkin!
@@ -761,10 +761,10 @@ Happiness = Kebahagiaan
 Production = Produksi
 Culture = Budaya
 Food = Makanan
-GOLDEN AGE = MASA KEEMASAN
+GOLDEN AGE = MASA JAYA
 Golden Age = Masa Keemasan
-[year] BC = [year] Sebelum Masehi
-[year] AD = [year] Sesudah Masehi 
+[year] BC = [year] SM
+[year] AD = [year] Masehi 
 Civilopedia = Civilopedia
 Start new game = Mulai permainan baru
 Save game = Simpan permainan
@@ -857,7 +857,7 @@ Your citizens have been happy with your rule for so long that the empire enters 
 You have entered the [newEra]! = Anda telah memasuki era [newEra]!
 [civName] has entered the [eraName]! = [civName] telah memasuki era [eraName]!
 [policyBranch] policy branch unlocked! = Cabang kebijakan [policyBranch] telah terbuka!
-Overview = Lihat lebih lengkap
+Overview = Selengkapnya
 Total = Total
 Stats = Statistik
 Policies = Kebijakan
@@ -1057,41 +1057,24 @@ Available for [unitTypes] =
 
 # Policies
 
- # Requires translation!
-Adopt policy = 
- # Requires translation!
-Adopt free policy = 
- # Requires translation!
-Unlocked at = 
+Adopt policy = Adopsi kebijakan
+Adopt free policy = Adopsi kebijakan gratis
+Unlocked at = Dibuka dalam
 
- # Requires translation!
-Tradition = 
- # Requires translation!
-+3 culture in capital and increased rate of border expansion = 
- # Requires translation!
-Aristocracy = 
- # Requires translation!
-+15% production when constructing wonders, +1 happiness for every 10 citizens in a city = 
- # Requires translation!
-Legalism = 
- # Requires translation!
-Immediately creates a cheapest available cultural building in each of your first 4 cities for free = 
- # Requires translation!
-Oligarchy = 
- # Requires translation!
-Units in cities cost no Maintenance, garrisoned city +50% attacking strength = 
- # Requires translation!
-Landed Elite = 
- # Requires translation!
-+10% food growth and +2 food in capital = 
- # Requires translation!
-Monarchy = 
- # Requires translation!
-+1 gold and -1 unhappiness for every 2 citizens in capital = 
- # Requires translation!
-Tradition Complete = 
- # Requires translation!
-+15% growth and +2 food in all cities = 
+Tradition = Tradisi
++3 culture in capital and increased rate of border expansion = +3 Budaya di ibukota dan mempercepat ekspansi perbatasan
+Aristocracy = Kaum Bangsawan
++15% production when constructing wonders, +1 happiness for every 10 citizens in a city = +15% produksi ketika membangun keajaiban alam, +1 kebahagiaan untuk setiap 10 penduduk di sebuah kota
+Legalism = Legalisme
+Immediately creates a cheapest available cultural building in each of your first 4 cities for free = Membuat sebuah bangunan budaya termurah yang tersedia di setiap 4 kota pertama secepatnya
+Oligarchy = Oligarki
+Units in cities cost no Maintenance, garrisoned city +50% attacking strength = Unit di kota tidak butuh biaya pemeliharaan, kekuatan tempur +50% di kota yang dibangun markas
+Landed Elite = Elit Lahan
++10% food growth and +2 food in capital = +10% pertumbuhan makanan dan +2 makanan di ibukota
+Monarchy = Kerajaan
++1 gold and -1 unhappiness for every 2 citizens in capital = +1 emas dan -1 ketidakbahagiaan untuk setiap 2 penduduk di ibukota
+Tradition Complete = Tradisi Komplit
++15% growth and +2 food in all cities = +15% pertumbuhan dan +2 makanan di semua kota
 
  # Requires translation!
 Liberty = 
@@ -1549,7 +1532,7 @@ Renaissance era = Era Pembangunan
 Industrial era = Ear Industri
 Modern era = Era Modern
 Information era = Era Informasi
-Future era = Era Masa Depan
+Future era = Masa Depan
 
 # Terrains
 
@@ -1573,26 +1556,16 @@ Impassible = Tidak Tercapai
 
 # Natural Wonders
 
- # Requires translation!
-Barringer Crater = 
- # Requires translation!
-Grand Mesa = 
- # Requires translation!
-Great Barrier Reef = 
- # Requires translation!
-Krakatoa = 
- # Requires translation!
-Mount Fuji = 
- # Requires translation!
-Old Faithful = 
- # Requires translation!
-Rock of Gibraltar = 
- # Requires translation!
-Cerro de Potosi = 
- # Requires translation!
-El Dorado = 
- # Requires translation!
-Fountain of Youth = 
+Barringer Crater = Kawah Barringer
+Grand Mesa = Mesa Agung
+Great Barrier Reef = Karang Penghalang Hebat
+Krakatoa = Krakatua
+Mount Fuji = Gunung Fuji
+Old Faithful = Bakti Tua
+Rock of Gibraltar = Batu Gibraltar
+Cerro de Potosi = Cerro de Potosi
+El Dorado = El Dorado
+Fountain of Youth = Air Mancur Pemuda
 
 # Natural Wonders Uniques
 
@@ -1673,8 +1646,7 @@ water units = Unit laut
 air units = Unit udara
  # Requires translation!
 WaterCivilian = 
- # Requires translation!
-Melee = 
+Melee = Jarak dekat
  # Requires translation!
 WaterMelee = 
 Ranged = Jarak jauh
@@ -1874,10 +1846,8 @@ Carrier =
 Triplane = 
  # Requires translation!
 [percent]% chance to intercept air attacks = 
- # Requires translation!
-Requires Manhattan Project = 
- # Requires translation!
-6 tiles in every direction always visible = 
+Requires Manhattan Project = Membutuhkan Projek Manhattan
+6 tiles in every direction always visible = 6 daerah di setiap arah selalu kelihatan
 Great War Bomber = Pengebom Perang Hebat
 Rocket Artillery = Artileri Roket
 Anti-Tank Gun = Senjata Anti-Tank
@@ -1901,7 +1871,7 @@ Nuclear Missile = Misil Nuklir
 Great Artist = Artis Hebat
 Unbuildable = Tidak bisa dibangun
 Can start an 8-turn golden age = Dapat memulai 8-giliran masa keemasan
-Can build improvement: Landmark = Dapat membangun improvisasi lahan: Tengara
+Can build improvement: Landmark = Dapat membangun improvisasi daerah: Tengara
 Great Scientist = Ilmuan Hebat
 Can hurry technology research = Dapat mempercepat riset teknologi
 Can build improvement: Academy = Dapat membangun improvisasi daerah: Akademi
@@ -1916,181 +1886,92 @@ Bonus for units in 2 tile radius 15% = Bonus untuk unit di jangkauan 2 daerah 15
 
 # Promotions
 
- # Requires translation!
-Pick promotion = 
- # Requires translation!
- OR  = 
- # Requires translation!
-Bonus vs [unitType] = 
- # Requires translation!
-Penalty vs [unitType] = 
- # Requires translation!
-Accuracy I = 
- # Requires translation!
-Accuracy II = 
- # Requires translation!
-Accuracy III = 
- # Requires translation!
-units in open terrain = 
- # Requires translation!
-units in rough terrain = 
- # Requires translation!
-Barrage I = 
- # Requires translation!
-Barrage II = 
- # Requires translation!
-Barrage III = 
- # Requires translation!
-Shock I = 
- # Requires translation!
-Shock II = 
- # Requires translation!
-Shock III = 
- # Requires translation!
-Drill I = 
- # Requires translation!
-Drill II = 
- # Requires translation!
-Drill III = 
- # Requires translation!
-Scouting I = 
- # Requires translation!
-Scouting II = 
- # Requires translation!
-Scouting III = 
- # Requires translation!
-+1 Movement = 
- # Requires translation!
-Cover I = 
- # Requires translation!
-Cover II = 
- # Requires translation!
-+25% Defence against ranged attacks = 
- # Requires translation!
-March = 
- # Requires translation!
-Charge = 
- # Requires translation!
-wounded units = 
- # Requires translation!
-Mobility = 
- # Requires translation!
-Volley = 
- # Requires translation!
-Sentry = 
- # Requires translation!
-Extended Range = 
- # Requires translation!
-+1 Range = 
- # Requires translation!
-Ranged attacks may be performed over obstacles = 
- # Requires translation!
-Formation I = 
- # Requires translation!
-Formation II = 
- # Requires translation!
-Blitz = 
- # Requires translation!
-Bombardment I = 
- # Requires translation!
-Bombardment II = 
- # Requires translation!
-Bombardment III = 
- # Requires translation!
-Boarding Party I = 
- # Requires translation!
-Boarding Party II = 
- # Requires translation!
-Boarding Party III = 
- # Requires translation!
-Coastal Raider I = 
- # Requires translation!
-Coastal Raider II = 
- # Requires translation!
-Coastal Raider III = 
- # Requires translation!
-Targeting I = 
- # Requires translation!
-Targeting II = 
- # Requires translation!
-Targeting III = 
- # Requires translation!
-Wolfpack I = 
- # Requires translation!
-Wolfpack II = 
- # Requires translation!
-Wolfpack III = 
- # Requires translation!
-Woodsman = 
- # Requires translation!
-Double movement rate through Forest and Jungle = 
- # Requires translation!
-Heal Instantly = 
- # Requires translation!
-Heal this Unit by 50 HP; Doing so will consume this opportunity to choose a Promotion = 
- # Requires translation!
-Medic = 
- # Requires translation!
-Medic II = 
- # Requires translation!
-This unit and all others in adjacent tiles heal 5 additional HP per turn = 
- # Requires translation!
-This unit and all others in adjacent tiles heal 5 additional HP. This unit heals 5 additional HP outside of friendly territory. = 
- # Requires translation!
-Targeting I (air) = 
- # Requires translation!
-Targeting II (air) = 
- # Requires translation!
-Targeting III (air) = 
- # Requires translation!
-Air Repair = 
- # Requires translation!
-Unit will heal every turn, even if it performs an action = 
- # Requires translation!
-Operational Range = 
- # Requires translation!
-+2 Range = 
- # Requires translation!
-Sortie = 
- # Requires translation!
-1 extra Interception may be made per turn = 
- # Requires translation!
-Bonus when performing air sweep [bonusAmount]% = 
- # Requires translation!
-Dogfighting I = 
- # Requires translation!
-Dogfighting II = 
- # Requires translation!
-Dogfighting III = 
- # Requires translation!
-Bonus when intercepting [bonusAmount]% = 
- # Requires translation!
-Interception I = 
- # Requires translation!
-Interception II = 
- # Requires translation!
-Interception III = 
- # Requires translation!
-Siege I = 
- # Requires translation!
-Siege II = 
- # Requires translation!
-Siege III = 
- # Requires translation!
-Evasion = 
- # Requires translation!
-Reduces damage taken from interception by 50% = 
- # Requires translation!
-Bonus when intercepting [amount]% = 
- # Requires translation!
-Ambush I = 
- # Requires translation!
-Ambush II = 
- # Requires translation!
-Haka War Dance = 
- # Requires translation!
--10% combat strength for adjacent enemy units = 
- # Requires translation!
-Rejuvenation = 
- # Requires translation!
-All healing effects doubled = 
+Pick promotion = Pilih promosi
+ OR  = ATAU
+Bonus vs [unitType] = Bonus vs [unitType]
+Penalty vs [unitType] = Penalti vs [unitType]
+Accuracy I = Akurasi I
+Accuracy II = Akurasi II
+Accuracy III = Akurasi III
+units in open terrain = unit di medan terbuka
+units in rough terrain = unit di medan tangguh
+Barrage I = Rentetan I
+Barrage II = Rentetan II
+Barrage III = Rentetan III
+Shock I = Kaget I
+Shock II = Kaget II
+Shock III = Kaget III
+Drill I = Bor I
+Drill II = Bor II
+Drill III = Bor III
+Scouting I = Kepanduan I
+Scouting II = Kepanduan II
+Scouting III = Kepanduan III
++1 Movement = +1 Pergerakan
+Cover I = Berlindung I
+Cover II = Berlindung II
++25% Defence against ranged attacks = +25 Perlindungan terhadap serangan berjarak
+March = Berbaris
+Charge = Serbuan
+wounded units = unit terluka
+Mobility = Mobilitas
+Volley = Voli
+Sentry = Penjaga
+Extended Range = Memperpanjang Jarak
++1 Range = +1 Jarak
+Ranged attacks may be performed over obstacles = Serangan berjarak mungkin dilakukan di atas halangan
+Formation I = Formasi I
+Formation II = Formasi II
+Blitz = Blitz
+Bombardment I = Pengeboman I
+Bombardment II = Pengeboman II
+Bombardment III = Pengeboman III
+Boarding Party I = Rombongan Pelaut I
+Boarding Party II = Rombongan Pelaut II
+Boarding Party III = Rombongan Pelaut III
+Coastal Raider I = Penjarah Pesisir I
+Coastal Raider II = Penjarah Pesisir II
+Coastal Raider III = Penjarah Pesisir III
+Targeting I = Penargetan I
+Targeting II = Penargetan II
+Targeting III = Penargetan III
+Wolfpack I = Kawanan Serigala I
+Wolfpack II = Kawanan Serigala II
+Wolfpack III = Kawanan Serigala III
+Woodsman = Ahli Hutan
+Double movement rate through Forest and Jungle = Dua kali kecepatan gerak melalui Hutan dan Hutan Belantara
+Heal Instantly = Sembuhkan seketika
+Heal this Unit by 50 HP; Doing so will consume this opportunity to choose a Promotion = Sembuhkan unit ini sebanyak 50 HP; Tetapi menghabiskan satu kesempatan untuk memilih Promosi
+Medic = Medis
+Medic II = Medis II
+This unit and all others in adjacent tiles heal 5 additional HP per turn = Unit ini dan semua unit lain yang berjarak 5 daerah mendapat penyembuhan sebanyak 5 HP per giliran
+This unit and all others in adjacent tiles heal 5 additional HP. This unit heals 5 additional HP outside of friendly territory. = Unit ini dan semua unit lain yang berjarak 5 daerah mendapat penyembuhan sebanyak 5 HP. Unit ini menyembukan diri sebanyak 5 HP di luar wilayah aman.
+Targeting I (air) = Penargetan I (udara)
+Targeting II (air) = Penargetan II (udara)
+Targeting III (air) = Penargetan III (udara)
+Air Repair = Perbaikan di Udara
+Unit will heal every turn, even if it performs an action = Unit akan regenerasi setiap giliran, bahkan jika melakukan misi
+Operational Range = Jarak Operasional
++2 Range = +2 Jarak
+Sortie = Penyebaran
+1 extra Interception may be made per turn = 1 Cegatan tambahan mungkin terjadi setiap satu giliran 
+Bonus when performing air sweep [bonusAmount]% = Bonus ketika melakukan pembersihan udara [bonusAmount]%
+Dogfighting I = Anjing penyerang I
+Dogfighting II = Anjing penyerang II
+Dogfighting III = Anjing penyerang III
+Bonus when intercepting [bonusAmount]% = Bonus ketika mencegat [bonusAmount]%
+Interception I = Pencegatan I
+Interception II = Pencegatan II
+Interception III = Pencegatan III
+Siege I = Kepungan I
+Siege II = Kepungan II
+Siege III = Kepungan III
+Evasion = Penghindaran
+Reduces damage taken from interception by 50% = Mengurangi kerusakan yang diterima dari pencegatan sebanyak 50%
+Bonus when intercepting [amount]% = Bonus ketika mencegat [amount]%
+Ambush I = Sergapan I
+Ambush II = Sergapan II
+Haka War Dance = Tarian Perang Haka
+-10% combat strength for adjacent enemy units = -10% kekuatan tempur karena di dekat unit musuh
+Rejuvenation = Pembaruan
+All healing effects doubled = Dua kali lipat semua efek penyembuhan
