Last CityScreen fix

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -298,6 +298,8 @@ Pick a construction =
 Queue empty = 
 Add to queue = 
 Remove from queue = 
+Show stats drilldown = 
+Show construction queue = 
 
 Diplomacy = 
 War = 
