--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Sticht een stad!\nSelecteer de kolonist (vlaggeneenheid) > Klik op 'Stad Stichten' (linksonder)
 Enter the city screen!\nClick the city button twice = Open het Stadscherm!\nKlik tweemaal op de stadsknop
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Kies een technologie om te onderzoeken!\nKlik op de technologie knop (groenachtig, linksboven) > \n selecteer technologie > klik op 'Onderzoek' (rechtsonder)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Kies een constructie!\nOpen het stadsscherm > Klik op een eenheid of gebouw (linkerkant)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beëindig je beurt!\nGa door de eenheden heen met 'Volgende eenheid' > Klik op 'Volgende beurt'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Wijs bewerkte tegels opnieuw toe!\nOpen het stadsscherm > klik op de toegewezen (groene) tegel om de toewijzing ongedaan te maken > \n klik op een niet-toegewezen tegel om populatie toe te wijzen
 Meet another civilization!\nExplore the map until you encounter another civilization! = Ontmoet een andere beschaving!\nOntdek de kaart totdat je een andere beschaving tegenkomt!
@@ -454,6 +455,23 @@ Requires a [buildingName] in this city =
 Requires [resource] = 
  # Requires translation!
 Required tech: [requiredTech] = 
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomatiek
 War = Oorlog
