--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -10,7 +10,7 @@ Enter the city screen!\nClick the city button twice =
  # Requires translation!
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
  # Requires translation!
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
  # Requires translation!
@@ -506,6 +506,23 @@ Requires a [buildingName] in this city =
 Requires [resource] = 
  # Requires translation!
 Required tech: [requiredTech] = 
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
  # Requires translation!
 Diplomacy = 
