--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Fondez une cité !\nChoisir un colon (unité avec un drapeau) > Cliquer sur 'Fonder une ville' (dans le coin inférieur gauche)
 Enter the city screen!\nClick the city button twice = Allez dans l'écran d'une cité !\nCliquer sur la cité deux fois
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Choisissez une technologie à rechercher !\nCliquer sur le bouton technologies (en vert, en haut à gauche) > \n Choisir une technologie > Cliquer sur 'Rechercher' (en bas à droite)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Choisissez une construction !\nAllez dans l'écran d'une cité  > Cliquez sur une unité ou un bâtiment (sur le coté gauche)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Passer un tour !\nParcourir les unités avec 'Unité suivante'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Réassignez les cases utilisées\nAllez dans l'écran d'une cité > Cliquer la case utilisée (verte) pour la libérer > \nCliquer sur une case libre pour lui affecter de la population
 Meet another civilization!\nExplore the map until you encounter another civilization! = Rencontrez une autre civilisation !\nExplorez la carte jusqu'à rencontrer une autre civilisation !
@@ -293,6 +294,23 @@ Requires a [buildingName] in all cities = Nécessite un(e) [buildingName] dans t
 Requires a [buildingName] in this city = Nécessite un(e) [buildingName] dans cette ville
 Requires [resource] = [resource] requis(e)
 Required tech: [requiredTech] = Nécessite la technologie: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomatie
 War = Guerre
