--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Fonda una Città!\nSeleziona il Colono (l'icona con la bandiera) > Clicca su 'Fonda Città' (angolo in basso a sinistra)
 Enter the city screen!\nClick the city button twice = Entra nella schermata cittadina!\nClicca due volte sul tasto.
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Ricerca una tecnologia!\nClicca sul tasto tecnologia (verdognolo, in alto a sinistra) > \nScegli una tecnologia > Clicca su 'Ricerca' (in basso a destra)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Scegli una costruzione\nEntra nella schermata cittadina > Clicca su un'unità o un edificio (lato sinistro)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Termina il turno!\nClicca su 'Prossima unità' varie volte > Clicca su 'Prossimo turno'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reassegna delle celle sfruttate\nEntra nella schermata cittadina > Clicca su una casella sfruttata (verde) per liberarla > \n Clicca su una casella non sfruttata per assegnarle un abitante
 Meet another civilization!\nExplore the map until you encounter another civilization! = Incontra un'altra civiltà!\nEsplora la mappa finché non incontri un'altra civiltà.
@@ -291,6 +292,23 @@ Requires a [buildingName] in all cities = Richiede [buildingName] in tutte le ci
 Requires a [buildingName] in this city = Richiede [buildingName] nella città
 Requires [resource] = Richiede [resource]
 Required tech: [requiredTech] = Tecnologie propedeutiche: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomazia
 War = Guerra
