--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -10,7 +10,7 @@ Enter the city screen!\nClick the city button twice =
  # Requires translation!
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
  # Requires translation!
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
  # Requires translation!
@@ -308,6 +308,23 @@ Requires a [buildingName] in all cities = 모든 도시에 [buildingName] 건물
 Requires a [buildingName] in this city = 이 도시에 [buildingName] 건물이 지어져 있어야 합니다.
 Requires [resource] = [resource] 자원이 필요합니다.
 Required tech: [requiredTech] = [requiredTech] 기술이 연구되어야 합니다.
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = 외교
 War = 전쟁
