--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Funde uma cidade!\nSelecione o colono (unidade da bandeira) > Clique em "Fundar cidade" (canto inferior esquerdo)
 Enter the city screen!\nClick the city button twice = Entre no painel da cidade!\nClique no botão da cidade duas vezes
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Escolha uma tecnologia para pesquisar!\nClique no botão de tecnologia (esverdeado, canto superior esquerdo) > \n selecione a tecnologia > clique "Pesquisar"(canto inferior direito)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Escolha uma construção!\nEntre no painel da cidade > Clique em uma unidade ou edificação (lado esquerdo)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Passe um turno!\nPercorra as unidades com "Próxima unidade" > Clique em "Próximo turno"
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reatribua solos trabalhados!\nEntre no painel da cidade > clique no solo atribuído (verde) para desatribuí-lo >  \n clique em um solo não atribuído para atribuí-lo a um habitante
 Meet another civilization!\nExplore the map until you encounter another civilization! = Conheça outra civilização!\nExplore o mapa até encontrar outra civilização!
@@ -295,6 +296,23 @@ Requires a [buildingName] in all cities = Requer um(a) [buildingName] em todas a
 Requires a [buildingName] in this city = Requer um [buildingName] nessa cidade
 Requires [resource] = Requer [resource]
 Required tech: [requiredTech] = Requer tecnologia: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomacia
 War = Guerra
