--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -5,7 +5,8 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = ¡Funda una ciudad!\nSelecciona el colono (unidad con la bandera) > Haz clic en 'Fundar ciudad' (abajo a la izquierda)
 Enter the city screen!\nClick the city button twice = Entra en la vista de la ciudad!\nHaz clic en la ciudad dos veces
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Elige una tecnología para investigar!\nHaz clic en el botón de la tecnología (verde, arriba a la izquierda) > \n Selecciona la tecnología > Haz clic en 'Investigar' (abajo a la derecha)
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = ¡Elige una construcción!\nEntra en la vista de la ciudad > Haz clic en un edificio o unidad (lado izquierdo)
+ # Requires translation!
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = ¡Pasa un turno!\nRecorre tus unidades con 'Siguiente unidad' > Haz clic en 'Siguiente turno'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reasigna casillas a explotar!\nEntra en la vista de la ciudad > Haz clic en la casilla asignada (en verde) para desasignarla > \n Haz clic en una casilla desasignada para asignarle población
 Meet another civilization!\nExplore the map until you encounter another civilization! = ¡Conoce otra civilización!\nExplora el mapa hasta que te encuentres con otra civilización!
@@ -293,6 +294,23 @@ Requires a [buildingName] in all cities = Requiere un [buildingName] en todas la
 Requires a [buildingName] in this city = Requiere un [buildingName] en la misma ciudad
 Requires [resource] = Requiere [resource]
 Required tech: [requiredTech] = Tecnología requerida: [requiredTech]
+
+ # Requires translation!
+Current construction = 
+ # Requires translation!
+Construction queue = 
+ # Requires translation!
+Pick a construction = 
+ # Requires translation!
+Queue empty = 
+ # Requires translation!
+Add to queue = 
+ # Requires translation!
+Remove from queue = 
+ # Requires translation!
+Show stats drilldown = 
+ # Requires translation!
+Show construction queue = 
 
 Diplomacy = Diplomacia
 War = Guerra
